<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account">

        <EditTextPreference
            app:key="account"
            app:title="@string/change_password"
            />


    </PreferenceCategory>

    <PreferenceCategory
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:foregroundTint="#FF9800"
        app:title="@string/general">


        <ListPreference
            app:defaultValue="false"
            app:dialogTitle="@string/remind_to_take_a_break"
            app:entries="@array/pref_remind_me_to_take_a_break"
            app:entryValues="@array/pref_duration"
            app:key="@string/reminder"
            app:summary="@string/remind_me"
            app:title="@string/remind_me" />



    </PreferenceCategory>
    <ListPreference
        android:clickable="true"
        android:key="logout"
        app:entries="@array/log_out_con"
        app:entryValues="@array/log_out_con"
        android:dialogTitle="Log Out"
        android:dialogMessage="Are you sure you want to log out?"
        android:title="@string/log_out" />


    <ListPreference
        android:key="delete_acc"
        android:selectAllOnFocus="true"
        android:title="@string/delete_acc" />



</PreferenceScreen>